syntax = "proto3";

package vehicle_shadow;

import "vehicle-shadow/types.proto";

// Signal service for vehicle shadow operations
service SignalService {
  // Get multiple signals by paths
  rpc Get(GetRequest) returns (GetResponse);
  
  // Set multiple signal values
  rpc Set(SetRequest) returns (SetResponse);
  
  // Subscribe to signal changes
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
  
  // Unsubscribe from signal changes
  rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse);
}

// Request to get signals
message GetRequest {
  repeated string paths = 1;
}

// Response for get request
message GetResponse {
  repeated Signal signals = 1;
  bool success = 2;
  string error_message = 3;
}

// Request to set signals
message SetRequest {
  repeated SetSignalRequest signals = 1;
}

// Individual signal set request
message SetSignalRequest {
  string path = 1;
  State state = 2;
}

// Response for set request
message SetResponse {
  repeated SetResult results = 1;
  bool success = 2;
  string error_message = 3;
}

// Individual set result
message SetResult {
  string path = 1;
  bool success = 2;
  string error_message = 3;
}

// Request to subscribe to signals
message SubscribeRequest {
  repeated string paths = 1;
}

// Response for subscribe request (stream)
message SubscribeResponse {
  Signal signal = 1;
  string error_message = 2;
}

// Request to unsubscribe from signals
message UnsubscribeRequest {
  repeated string paths = 1;
}

// Response for unsubscribe request
message UnsubscribeResponse {
  bool success = 1;
  string error_message = 2;
}

// Signal data structure
message Signal {
  string path = 1;
  State state = 2;
  Config config = 3;
}

// State information
message State {
  optional Value value = 1;
  optional bool capability = 2;
  optional bool availability = 3;
  optional string reserved = 4;
}

// Configuration information
message Config {
  LeafType leaf_type = 1;
  ValueType data_type = 2;
  optional string deprecation = 3;
  optional string unit = 4;
  optional Value min = 5;
  optional Value max = 6;
  optional string description = 7;
  optional string comment = 8;
  repeated Value allowd = 9;
  optional Value default = 10;
} 