syntax = "proto3";

package vehicle_shadow;

// Value types enum
enum ValueType {
  TYPE_NAN = 0;
  TYPE_BOOL = 1;
  TYPE_STRING = 2;
  TYPE_INT8 = 3;
  TYPE_INT16 = 4;
  TYPE_INT32 = 5;
  TYPE_INT64 = 6;
  TYPE_UINT8 = 7;
  TYPE_UINT16 = 8;
  TYPE_UINT32 = 9;
  TYPE_UINT64 = 10;
  TYPE_FLOAT = 11;
  TYPE_DOUBLE = 12;
  TYPE_BOOL_ARRAY = 13;
  TYPE_STRING_ARRAY = 14;
  TYPE_INT8_ARRAY = 15;
  TYPE_INT16_ARRAY = 16;
  TYPE_INT32_ARRAY = 17;
  TYPE_INT64_ARRAY = 18;
  TYPE_UINT8_ARRAY = 19;
  TYPE_UINT16_ARRAY = 20;
  TYPE_UINT32_ARRAY = 21;
  TYPE_UINT64_ARRAY = 22;
  TYPE_FLOAT_ARRAY = 23;
  TYPE_DOUBLE_ARRAY = 24;
}

// Leaf types enum
enum LeafType {
  LEAF_TYPE_BRANCH = 0;
  LEAF_TYPE_SENSOR = 1;
  LEAF_TYPE_ATTRIBUTE = 2;
  LEAF_TYPE_ACTUATOR = 3;
}

// Value union type
message Value {
  oneof value {
    bool bool_value = 1;
    string string_value = 2;
    int32 int8_value = 3;
    int32 int16_value = 4;
    int32 int32_value = 5;
    int64 int64_value = 6;
    uint32 uint8_value = 7;
    uint32 uint16_value = 8;
    uint32 uint32_value = 9;
    uint64 uint64_value = 10;
    float float_value = 11;
    double double_value = 12;
    BoolArray bool_array_value = 13;
    StringArray string_array_value = 14;
    Int8Array int8_array_value = 15;
    Int16Array int16_array_value = 16;
    Int32Array int32_array_value = 17;
    Int64Array int64_array_value = 18;
    Uint8Array uint8_array_value = 19;
    Uint16Array uint16_array_value = 20;
    Uint32Array uint32_array_value = 21;
    Uint64Array uint64_array_value = 22;
    FloatArray float_array_value = 23;
    DoubleArray double_array_value = 24;
  }
}

// Array types
message BoolArray {
  repeated bool values = 1;
}

message StringArray {
  repeated string values = 1;
}

message Int8Array {
  repeated int32 values = 1;
}

message Int16Array {
  repeated int32 values = 1;
}

message Int32Array {
  repeated int32 values = 1;
}

message Int64Array {
  repeated int64 values = 1;
}

message Uint8Array {
  repeated uint32 values = 1;
}

message Uint16Array {
  repeated uint32 values = 1;
}

message Uint32Array {
  repeated uint32 values = 1;
}

message Uint64Array {
  repeated uint64 values = 1;
}

message FloatArray {
  repeated float values = 1;
}

message DoubleArray {
  repeated double values = 1;
} 